--- a/pages/index.css
+++ b/pages/index.css
@@ -110,19 +110,20 @@
   color: #838383;
 }
 
-.footer__list {
-  padding: 0;
-  margin-top: 0;
-  margin-bottom: 40px;
-  margin-left: 80px;
+.header__footer-hours {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 40px 80px;
 }
 
-.footer__item {
-  list-style-type: none;
+.header__footer-address {
+  display: flex;
+  flex-direction: column;
+  margin: 0 80px 40px 0;
 }
 
 .header__paragraph {
-  margin: 0 80px 40px 0;
+  margin: 0;
 }
 
 .recipes {
