--- a/pages/index.css
+++ b/pages/index.css
@@ -196,8 +196,8 @@
 }
 
 .reservation__title {
-  margin: 0;
-  padding-top: 100px;
+  margin: 100px 0 0 0;
+  padding: 0;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -256,7 +256,7 @@
   color: #838383;
 }
 
-.form__button--submit {
+.form__button {
   width: 100%;
   height: 60px;
   margin: 32px 0 32px 0;
@@ -273,24 +273,24 @@
   cursor: pointer;
 }
 
-.form__button--submit:hover {
+.form__button:hover {
   opacity: 0.7;
 }
 
-.form__checkbox-group {
+.form__label_type_checkbox {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 12px;
 }
 
-.form__checkbox {
+.form__input_type_checkbox {
   border-radius: 2px;
   width: 20px;
   height: 20px;
 }
 
-.form__checkbox:checked {
+.form__input_type_checkbox:checked {
   background-color: #2f80ed;
   background-image: url("./../images/check.svg");
   background-repeat: no-repeat;
