--- a/pages/index.css
+++ b/pages/index.css
@@ -196,7 +196,7 @@
 }
 
 .reservation__title {
-  margin: 100px 0 0 0;
+  margin: 100px 0 80px 0;
   padding: 0;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
@@ -209,7 +209,7 @@
 .reservation__form {
   max-width: 385px;
   margin: 0;
-  padding-top: 80px;
+  padding-top: 0;
   padding-bottom: 120px;
 }
 
