--- a/pages/index.css
+++ b/pages/index.css
@@ -196,7 +196,8 @@
 }
 
 .reservation__title {
-  margin: 100px 0 80px 0;
+  margin-top: 100px;
+  margin-bottom: 80px;
   padding: 0;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
