--- a/pages/index.css
+++ b/pages/index.css
@@ -196,8 +196,7 @@
 }
 
 .reservation__title {
-  margin-top: 100px;
-  margin-bottom: 80px;
+  margin: 100px 0 80px;
   padding: 0;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
