--- a/pages/index.css
+++ b/pages/index.css
@@ -1,300 +1,6 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  position: relative;
-  background-color: #ffffff;
-  background-image: url("./../images/background_header.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  max-height: 800px;
-  min-height: 720px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  margin-top: 30px;
-  margin-left: 30px;
-}
-
-.nav__links {
-  display: flex;
-  list-style-type: none;
-  padding: 0;
-  gap: 20px;
-  margin-top: 30px;
-  margin-right: 30px;
-  margin-bottom: 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000000;
-}
-
-.header__span-accent {
-  display: block;
-  color: #2f80ed;
-  font-family: "Noto Serif", serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 58px;
-  line-height: 72px;
-}
-
-.header__title {
-  margin-top: 183px;
-  margin-bottom: 0;
-  margin-left: 80px;
-  max-width: 709px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: -1px;
-}
-
-.header__description {
-  margin-top: 28px;
-  margin-bottom: 0;
-  margin-left: 80px;
-  max-width: 683px;
-  font-family: "Noto Serif", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  position: absolute;
-  margin: 0;
-  top: 124px;
-  right: 5px;
-  width: 646px;
-  height: 568px;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  margin-top: auto;
-  width: 100%;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-}
-
-.header__footer-hours {
-  display: flex;
-  flex-direction: column;
-  margin: 0 0 40px 80px;
-}
-
-.header__footer-address {
-  display: flex;
-  flex-direction: column;
-  margin: 0 80px 40px 0;
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url("./../images/background_recipes.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.recipes__title {
-  padding-top: 100px;
-  margin: 0px 0 0 80px;
-  max-width: 580px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  color: #ffffff;
-}
-
-.recipes__subtitle {
-  margin: 24px 0 0 80px;
-  max-width: 438px;
-  font-family: "Noto Serif", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #ffffff;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  margin: 80px 0 0 0;
-  padding-bottom: 215px;
-  gap: 40px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0 0 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #ffffff;
-}
-
-.reservation {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-  padding-top: 100px;
-  background-color: #d9e7ff;
-  background-image: url("./../images/background_reservation.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.reservation__title {
-  margin: 0 auto 80px;
-  padding: 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  color: #000000;
-}
-
-.reservation__form {
-  max-width: 385px;
-  margin: 0;
-  padding-top: 0;
-  padding-bottom: 120px;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-  max-width: 385px;
-}
-
-.form__label {
-  width: 100%;
-  display: block;
-  margin-top: 32px;
-  margin-bottom: 8px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #000000;
-}
-
-.form__label:first-child {
-  margin-top: 0;
-}
-
-.form__input {
-  border-radius: 4px;
-  width: 100%;
-  height: 60px;
-  padding: 0;
-  border-color: #838383;
-}
-
-.form__input::placeholder {
-  padding-top: 15px;
-  padding-left: 20px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-}
-
-.form__button {
-  width: 100%;
-  height: 60px;
-  margin: 32px 0 32px 0;
-  padding: 0;
-  border-radius: 4px;
-  border: none;
-  background-color: #2f80ed;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #ffffff;
-  cursor: pointer;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-}
-
-.form__input_type_checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-}
-
-.form__input_type_checkbox:checked {
-  background-color: #2f80ed;
-  background-image: url("./../images/check.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
+@import url("./../blocks/general.css");
+@import url("./../blocks/header.css");
+@import url("./../blocks/recipes.css");
+@import url("./../blocks/reservation.css");
+@import url("./../blocks/form.css");
+@import url("./../blocks/footer.css");
