--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -31,7 +31,7 @@
 .footer__social {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .footer__social-heading {
